--- a/package.json
+++ b/package.json
@@ -16,29 +16,36 @@
     "@prisma/client": "^7.0.0",
     "@prisma/config": "^7.0.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "ioredis": "^5.8.2",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/connect-redis": "^0.0.23",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.8.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/streamifier": "^0.1.2",
     "prisma": "^7.0.0",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
