--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "cloudinary": "^2.8.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
     "dotenv": "^16.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
