finish the payement gate with wallet logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,12 @@
     "rootDir": "./src",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es2022",
+    "target": "es2020",
     "strict": true,
     "esModuleInterop": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
