--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
+    "stripe": "^20.2.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
