--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
-node_modules
-# Keep environment variables out of version control
-.env
+# Node modules
+node_modules/
 
-/src/generated/prisma
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env*
+.env
+.env.development
+.env.production
+.env.test
+
+# Build output
+dist/
+build/
+
+# Prisma generated files
+/src/generated/prisma/
+
+# Optional: IDE/editor settings
+.vscode/
+.idea/
+.DS_Store
