--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^2.8.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
     "dotenv": "^16.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -49,7 +50,7 @@
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/streamifier": "^0.1.2",
-    "prisma": "^7.0.0",
+    "prisma": "^6.19.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
