--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
-    "start:prod": "cross-env NODE_ENV=production tsx src/index.ts"
+    "dev": "tsx watch src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
@@ -23,7 +20,6 @@
     "cloudinary": "^2.8.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
-    "cross-env": "^10.1.0",
     "dotenv": "^16.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -32,23 +28,25 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "prisma": "^7.3.0",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "stripe": "^20.2.0",
-    "zod": "^4.1.12",
+    "zod": "^4.1.12"
+  },
+  "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/connect-redis": "^0.0.23",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
+    "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.8.1",
     "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/streamifier": "^0.1.2",
+    "prisma": "^7.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
