--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,7 @@
     "target": "es2020",
     "strict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
