--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "tager_server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "dev": "tsx watch src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "type": "commonjs",
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev"
+  },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.0.0",
-    "@prisma/client": "^7.0.0",
-    "@prisma/config": "^7.0.0",
+    "@prisma/client": "6.0.0",
+    "@prisma/adapter-pg": "6.0.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
@@ -35,20 +32,19 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "prisma": "6.0.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "@types/node": "^24.8.1",
     "@types/bcrypt": "^6.0.0",
     "@types/connect-redis": "^0.0.23",
-    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/express-session": "^1.18.2",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.8.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/streamifier": "^0.1.2",
-    "prisma": "^7.0.0",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "@types/streamifier": "^0.1.2"
   }
 }
