--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "tager_server",
   "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node  dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev"
   },
@@ -18,10 +18,11 @@
     "cloudinary": "^2.8.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
     "dotenv": "^16.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "ioredis": "^5.8.2",
+    "ioredis": "^5.9.2",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
