--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
       "rootDir": "./src",
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-      "module": "commonjs",
-      "moduleResolution": "node",
+      "module": "nodenext",
+      "moduleResolution": "nodenext",
       "target": "es2020",
       "strict": true,
       "esModuleInterop": true
